k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-files-demo-service
  labels:
    app: azure-files-demo
spec:
  selector:
    app: azure-files-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
